# llm-min.txt

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .roomodes  CHANGELOG.MD  README.md  case.md  main.py  project_overview.json  project_state.json  pyproject.toml  run_integration_test.py  shdf-guide.md  temp_validation_script.py  test.py
.docs/: index.md
.github/workflows/: ci.yml  publish.yml
.reports/: refactor-organic-python-validation-report.md
.specs/: context_generator_design.md  litellm_integration_strategy.md  pypi_code_removal_analysis_001.md  pypi_packaging_plan.md  refactor-organic-python.md  refine_compaction_prompt.md  test_coverage_analysis_plan_001.md
assets/: guideline.md  llm_min_guideline.md  new_schema.md  prd.md
my_docs/3.library.os.html/: llm-full.txt
my_docs/beautifulsoup4/: llm-full.txt  llm-min.txt
my_docs/crawl4ai/: llm-full.txt  llm-min.txt
my_docs/google-genai/: llm-full.txt  llm-min.txt
my_docs/litellm/: llm-full.txt  llm-min.txt
my_docs/pydantic/: llm-full.txt  llm-min.txt
my_docs/requests/: llm-full.txt  llm-min.txt
my_docs/svelte/: llm-full.txt
my_docs/three.js/: llm-full.txt
my_docs/torch/: llm-full.txt  llm-min.txt
my_docs/uv/: llm-full.txt  llm-min.txt
sample/bun/: llm-full.txt  llm-min.txt
sample/crawl4ai/: llm-full.txt  llm-min-guideline.md  llm-min.txt
sample/docs_svelte/: llm-full.txt  llm-min.txt
sample/google-genai/: llm-full.txt  (+2 more)
src/: __init__.py
tests/: test_compacter.py  test_crawler.py  test_lint.py  test_main.py  test_parser.py  test_search.py
tools/: calculate_token_reduction.py  visualize_token_reduction.py
(+20 files in other folders)
